--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="color_done">#00c853</color>
     <color name="color_doing">#ffeb3b</color>
     <color name="color_undone">#8d6e63</color>
-
+    <color name="color_moved">#ff8a80</color>
 </resources>
